# weather-tool

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-14-weather-tool.md
docs/superpowers/specs/: 2026-05-14-weather-tool-design.md
src/weather_tool/: __init__.py  tool.py
tests/: test_tool.py
