[project]
name = "weather_tool"
version = "0.1.0"
description = "Power up your crews with weather_tool"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "requests>=2.28.0",
]

[tool.crewai]
type = "tool"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
